# UK_295_MyApp

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  default.nix  devshell.toml  jest.config.ts  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.build.json
.github/ISSUE_TEMPLATE/: bug_report.md
http/:  05_article.http  http-client.env.json
postman/: myApp-local.postman_collection.json  myApp-local.postman_environment.json  myTodoApp.postman_collection.json
src/: actions.rs  app.module.ts  data.rs  main.rs  main.ts
src/decorators/: corr-id.decorator.ts  correlation-id-request.ts
src/informations/: config.swagger-info.ts
src/interceptors/: http-meta-interceptor.service.interceptor.ts
src/modules/article/: article.module.ts
src/modules/article/controller/: article.controller.ts
src/modules/article/dto/: create-article.dto.ts  replace-article.dto.ts  return-article.dto.ts  update-article.dto.ts
src/modules/article/entities/: article.entity.ts
src/modules/article/seed/: article-seed.service.ts
src/modules/article/service/: article.service.spec.ts  article.service.ts
src/modules/auth/: auth.module.ts
src/modules/auth/controller/: auth.controller.ts
src/modules/auth/dto/: sign-in.dto.ts  (+1 more)
test/: jest-e2e.json
test/e2e/: 01-auth.e2e-spec.ts  02-profile.e2e-spec.ts  03-register-validations.e2e-spec.ts  04-user.e2e-spec.ts  05-article.e2e-spec.ts
test/utils/: assertions.ts  db-reset.ts  e2e-app.ts  test-app.module.ts
(+12 files in other folders)
